Changed: Featured listings styling on mobile. Fixed listings gap

--- a/src/components/Listings/SmallListings/SmallListingStyles.css
+++ b/src/components/Listings/SmallListings/SmallListingStyles.css
@@ -2,7 +2,7 @@
 {
     all: unset;
 
-    width: 300px;
+    min-width: 300px;
     border-width: 1px;
     border-color:black;
     border-radius: 9px;
@@ -31,6 +31,10 @@
     margin-bottom: 37px;
     max-width: 80%;
 
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    /* grid-template-columns: repeat(4, 1fr); */
+    display: grid;
+    grid-gap: 20px;
 }
 
 .Featured--module
@@ -132,6 +136,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
+    /* padding: 0px 0 20px 20px;
+    box-sizing: border-box; */
 }
 
 .Featured--module
@@ -142,18 +149,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
 } 
 
 .Listingcard--container--mobile
 {
     all: unset;
 
-    min-width: 300px;
-    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 0 15px 0 15px;
     border-width: 1px;
     border-color:black;
     border-radius: 9px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.Listingcard--background--mobile
+{
+    all: unset;
+    position: relative;
+    transform: none;
+    min-width: 100%;
+    min-height: 90px;
+    max-height: 90px;
+    border-radius: 0 0px 9px 9px;
+
+    display: flex;
+    justify-content: space-between;
+    padding: 0 25px 0 25px;
+    box-sizing: border-box;
+    align-items: center;
+    margin-left: auto;
+}
+
+.Listingcard--container--mobile > img 
+{
+    min-width: 400px;
+    border-radius: 9px 9px 0 0;
 }
 
 .Listingcard--container--mobile:focus, .Listingcard--container--mobile:hover
